<resources>
    <string name="app_name">Regrowth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_graph">Graph</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chicken">Chicken</string>
    <string name="pig">Pig</string>
    <string name="goat">Goat</string>
    <string name="sheep">sheep</string>
    <string name="notifications">notifications</string>
    <string name="profile">profile</string>
    <string name="menu">menu</string>
    <string name="add_node">Edit Nodes</string>
    <string name="battery">Battery</string>
    <string name="gateway_id">GATEWAY ID</string>
    <string name="tension">Tension</string>
    <string name="connection">connection</string>
    <string name="percent">percent</string>
    <string name="please_enter_the_node_id">Please enter the Node ID</string>

    <!--Animals Tabs Colors-->
    <string name="Chicken_Tab_Color">#F4B942</string>
    <string name="Pig_tab_color">#F95A10</string>
    <string name="Sheep_Tab_Color">#47A025</string>
    <string name="Goat_Tab_Color">#28BB11</string>

    <!--BarCharts Colors-->
    <string name="Weight_Bar_Color">#006400</string>
    <string name="Activity_Bar_Color">#F44336</string>

    <string-array name="node_connections">
        <item>Gateway</item>
        <item>Internet</item>
    </string-array>

    <string-array name="animal_names">
        <item>Goat</item>
        <item>Pig</item>
        <item>Sheep</item>
        <item>Chicken</item>
    </string-array>

    <string-array name="node_connection">
        <item>Connected</item>
        <item>Disconnected</item>
    </string-array>

    <integer-array name="animal_images">
        <item>@drawable/ic_goat</item>
        <item>@drawable/ic_pig</item>
        <item>@drawable/ic_sheep</item>
        <item>@drawable/ic_chicken</item>
    </integer-array>

    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="webclient_id">"248185106763-sm8tco5ioh9rc6paci899tt52hdi5m2c.apps.googleusercontent.com"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_api_key">AIzaSyBtI4xWb-bkaQmkJhWSwwfsjsu2ba0bkAs</string>
</resources>